# Quic_Android

./: .gitignore  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/quicandroid/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/quicandroid/: Activity2.java  Activity3.java  MainActivity.java  QuicRequest.java  Server.java
android/app/src/main/res/layout/: activity_2.xml  activity_3.xml  activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/quicandroid/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
cargo/: Cargo.toml
cargo/src/: lib.rs
script/: script.py  server-0db0c217d405fdc11dbb4e9915a693d1fb015d2a.qlog
