[package]
name = "quic_android"
version = "0.1.0"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
name = "quic_android"
crate-type = ["rlib", "dylib"]

[dependencies]
quiche = "0.10.0"
log = {version = "0.4", features = ["std"]}
ring = "0.16"
mio = "0.6"
url = "1"

